Mejorando error de li hijo directo de div

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="content " id="content"><!-- Change Mode -->
             <div class="content--header"> 
                 <!-- Change Mode search icon -->
-                <input type="text" id="input__content"  class="input input__content" placeholder="Search for a country...">
+                <input type="text" name="input_country" id="input__content"  class="input input__content" placeholder="Search for a country...">
                 <div class="content--select">
                     <!-- select__tittle__changeMode -->
                     <div name="" class="select select__tittle" id="select__tittle">
