parchando todos los bugs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             </div>
             <div class="header--check">
                 <div class="content-check">
-                   <input type="checkbox" class="input input__header" name="" id="input__header">
+                    <form action="">
+                        <input type="checkbox" class="input input__header" name="input__header" id="input__header">
+                    </form>
+                   
                    <label for="input__header" class="label label__check" id="header-check-label"></label>
                    <div class="check--img" id="check--img"></div>
                 </div>
@@ -26,7 +29,9 @@
         <div class="content " id="content"><!-- Change Mode -->
             <div class="content--header"> 
                 <!-- Change Mode search icon -->
-                <input type="text" name="input_country" id="input__content"  class="input input__content" placeholder="Search for a country...">
+                <form action="">
+                    <input type="text" name="country" id="input__content"  class="input input__content" placeholder="Search for a country...">
+                </form>
                 <div class="content--select">
                     <!-- select__tittle__changeMode -->
                     <div name="" class="select select__tittle" id="select__tittle">
