--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </form>
                 <div class="content--select">
                     <!-- select__tittle__changeMode -->
-                    <div name="" class="select select__tittle" id="select__tittle">
+                    <div  class="select select__tittle" id="select__tittle">
                         Filter by Region
                     </div>
                     <div class="select__items toggle" id="select__items">
